# AURA-LAb

./: .gitignore  LICENSE  PROVENANCE.md  README.md  begin_here.md  lab.py  phd_thesis.md  phd_thesis2.md  phd_thesis3.md
CBIG/: Analyzing Context-Bound Integrity Gate.md  EGD_Chapter1_The_Death_of_Determinism.md  EGD_Chapter2_Context_as_Cryptographic_Primitive.md  EGD_Chapter3_Trajectory_Control_Theory.md  EGD_Chapter4_The_Sentinel_Protocol.md  EGD_Chapter5_Generalization_Beyond_AURA.md  EGD_Chapter6_Related_Work_and_Differentiation.md  EGD_Chapter7_Limitations_Ethics_Failure_Modes.md  EGD_Chapter8_Conclusion.md  Evaluating Execution Governance Dynamics Framework.md
core/: qsic_engine.py  vacuum_chamber.py
experiments/: __init__.py  experiment1.py  experiment2_sawtooth.py  experiment3_floquet_scattering.py  experiment4_thermal_decoherence.py  experiment4b_langevin_damping.py  experiment4c_floquet_langevin.py  experiment4d_high_power.py  experiment4e_thermal_stress_optimized.py  experiment5_active_feedback.py  experiment5b_demon_controls.py  experiment6_qsic.py
flight_recorder/: mission_logger.py
foundational_laws/: aibor.md  mma.md
funding/: CONSULTING_OFFER.md  CONTACT_TARGETS.md  DO_NOT_SAY.md  EXTRACTS.md  FAQ_IP_SAFETY.md  GRANT_PROPOSAL_SHORT.md  LETTER_TO_FUNDER.md  NAMING.md  NEUROCOGNICA.md  ONE_PAGER.md  README.md
sentinel_core/: Cargo.toml
sentinel_core/src/: context.rs  error.rs  flight_recorder.rs  gamma.rs  lib.rs  simplex.rs  vdf.rs
thesis_portfolio/: 01_floquet_physics_cover.md  02_computational_methods.md  02_computational_methods_cover.md  (+7 more)
