[package]
name = "sentinel_core"
version = "0.1.0"
edition = "2021"
authors = ["AURA Project"]
description = "Execution Governance Dynamics - Reference Implementation"
license = "MIT"

[dependencies]
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
